# hotkeys-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
debian/: changelog  control  copyright  hotkeys.desktop  postinst  postrm  rules
resources/: log.toml  settings.json  settings.keyboard.json  settings.styling.json
resources/schemas/: components.schema  definitions.schema  settings.schema
src/: executor.rs  main.rs  process.rs
src/app/: board_factory.rs  config.rs  controller.rs  json_repository.rs  mod.rs
src/components/: boards.rs
src/core/: actions.rs  board.rs  data.rs  mod.rs  repository.rs  resources.rs
src/input/: api.rs  mod.rs  script.rs  steps.rs
src/input/keys/: ckey.rs  mod.rs  vkey.rs
src/tools/: input_test.rs  mod.rs
src/windows/: board.rs  layout.rs  mod.rs  modifier_handler.rs  renderer.rs
